--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -31,3 +31,16 @@ body {
   font-size: 1em;
   background-color: $sub-color0;
 }
+
+button{
+  height: 30px;
+  width: 30px;
+  outline: none;
+  margin: 10px;
+  border: none;
+  border-radius: 2px;
+}
+
+button.current {
+  box-shadow: 0 0 0 2px white, 0 0 0 4px black;
+}
