--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -49,6 +49,10 @@ body {
     font-size: 1.5rem;
     margin: 0 0 0.5rem 0;
   }
+
+  .description {
+    max-width: 600px;
+  }
 }
 
 .setting_values_wrapper {
