--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -37,21 +37,27 @@ body {
   flex-direction: column;
   h1 {
     font-size: 2rem;
+    margin-bottom: 0.5rem;
+    padding-bottom: 0.1rem;
+    border-bottom: 2px solid gray;
   }
 }
 
 .setting_wrapper {
   display: flex;
   flex-direction: column;
-  margin: 0.1rem 0.1rem 0.1rem 0.1rem;
+  margin: 0.5rem 0.1rem 0.1rem 0.5rem;
 
   h2 {
     font-size: 1.5rem;
     margin: 0 0 0.5rem 0;
+    padding-bottom: 0.1rem;
+    border-bottom: 2px solid gray;
   }
 
   .description {
     max-width: 600px;
+    margin: 0.1rem 0.1rem 0.1rem 0.5rem;
   }
 }
 
@@ -79,6 +85,20 @@ body {
         margin-left: 0.5rem;
         width: 5rem;
       }
+    }
+  }
+
+  .select_wrapper {
+    display: flex;
+    flex-direction: row;
+    margin: 0.2rem 0.2rem 0.2rem 1rem;
+
+    h3 {
+      font-size: large;
+    }
+    .language_select {
+      margin-left: 0.5rem;
+      padding: 0.1rem;
     }
   }
 }
@@ -138,4 +158,38 @@ button {
 
 button.current {
   box-shadow: 0 0 0 2px white, 0 0 0 4px black;
+}
+
+//popup
+.popup_wrapper {
+}
+
+.context_menu_wrapper {
+  display: flex;
+  flex-direction: column;
+
+  h2 {
+    border-bottom: 2px solid gray;
+    height: 1.4rem;
+    padding: 0.1rem 0 0.1rem 0.1rem;
+  }
+
+  .context_wrapper {
+    display: flex;
+    flex-direction: row;
+    border-bottom: 2px solid gray;
+    height: 1.4rem;
+    justify-content: center;
+
+    h3 {
+      width: 3rem;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+    }
+    .language_select {
+      margin-left: 0.5rem;
+      padding: 0.1rem;
+    }
+  }
 }
